--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,9 @@
 Things to be done for this to be useful:
 
-- Implement timer to disable it after X minutes. Currently it remains configurable for the lifetime of the device.
+- Implement timer to disable it after X minutes. Currently it remains configurable for the lifetime of the device. (though this CAN be worked around by calling end() from the  main app)
 - Some *very basic* input validation at least
 - Re-test the ability to write values > 8 bits.. have I lost that ability with the changed uint methods?
+- Auto-generate service and descriptor UUIDs. (Not just that of the characteristic.)
 
 
 Also,
@@ -11,9 +12,10 @@ Also,
 - Implement a Read-Only characteristic with some sort of unique identifier (based on MAC address or whatnot - something to differentiate multiple similar devices). Maybe use Manufacturer Data for that.
 - More generally, implement some Manufacturer Data.
 - Apply values right away but don't make them persistent until BLE disconnect? (This would create some safeguard against storing bad values)?
+- co-exist with other BLE services. Someone may want to eg. publish battery percentage.
 
 
 Later,
 
-- Implement other data types eg strings
+- Implement other data types eg strings, bool
 - Implement input validation and figure out how to respond to invalid input
